crates/sui-prover/tests/snapshots/object_getter.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 148
expression: output
---
Verification successful
