crates/sui-prover/tests/snapshots/recursion_mutual.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Recursive functions are not supported for specifications.
Path: recursion_mutual_fail::factorial_complex -> recursion_mutual_fail::factorial_helper
   ┌─ tests/inputs/recursion_mutual.fail.move:10:1
   │  
10 │ ╭ public fun factorial_complex(x: u64): u64 {
11 │ │   if (x == 0) {
12 │ │     1
13 │ │   } else {
14 │ │     factorial_helper(x - 1)
15 │ │   }
16 │ │ }
   │ ╰─^

error: Recursive functions are not supported for specifications.
Path: recursion_mutual_fail::factorial_complex -> recursion_mutual_fail::factorial_helper
  ┌─ tests/inputs/recursion_mutual.fail.move:6:1
  │  
6 │ ╭ public fun factorial_helper(x: u64): u64 {
7 │ │   x * factorial_complex(x)
8 │ │ }
  │ ╰─^
