crates/sui-prover/tests/snapshots/recursion_simple.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Recursive functions are not supported for specifications.
Path: recursion_simple_fail::factorial -> recursion_simple_fail::factorial
   ┌─ tests/inputs/recursion_simple.fail.move:6:1
   │  
 6 │ ╭ public fun factorial(x: u64): u64 {
 7 │ │   if (x == 0) {
 8 │ │     1
 9 │ │   } else {
10 │ │     x * factorial(x - 1)
11 │ │   }
12 │ │ }
   │ ╰─^
