crates/sui-prover/tests/snapshots/run_on_invalid.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: invalid run_on value "somewhere". Valid values are: local, cloud, boogie, lean
   ┌─ tests/inputs/run_on_invalid.fail.move:9:1
   │  
 9 │ ╭ public fun foo_spec_invalid() {
10 │ │     foo();
11 │ │ }
   │ ╰─^
