crates/sui-prover/tests/snapshots/skip-focus.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: invalid #[ext(spec(...))] on 'foo::foo_spec': cannot use both `focus` and `skip`
   ┌─ tests/inputs/skip-focus.fail.move:10:1
   │  
10 │ ╭ public fun foo_spec() {
11 │ │   foo();
12 │ │   ensures(true); 
13 │ │ }
   │ ╰─^
