crates/sui-prover/tests/snapshots/skip.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 141
expression: output
---
Verification successful
